--- a/Azure/app/layout/blade/blade.html
+++ b/Azure/app/layout/blade/blade.html
@@ -10,17 +10,17 @@
                 </div>
                 <label>Subtitle</label>
                 <div class="input-control text">
-                    <input type="text" placeholder="Enter title" data-ng-model="vm.subtitle">
+                    <input type="text" placeholder="Enter subtitle" data-ng-model="vm.subtitle">
                     <button class="btn-clear" tabindex="-1" type="button"></button>
                 </div>
                 <label>Content Url</label>
                 <div class="input-control text">
-                    <input type="text" placeholder="Enter title" data-ng-model="vm.contentUrl">
+                    <input type="text" placeholder="" data-ng-model="vm.contentUrl">
                     <button class="btn-clear" tabindex="-1" type="button"></button>
                 </div>
                 <label>Width</label>
                 <div class="input-control text">
-                    <input type="text" placeholder="Enter title" data-ng-model="vm.width">
+                    <input type="text" placeholder="Enter width in pixels" data-ng-model="vm.width">
                     <button class="btn-clear" tabindex="-1" type="button"></button>
                 </div>
                 <button class="button" data-ng-click="vm.sub()">Add Blade</button>
