--- a/Azure/app/layout/blade/blade-container.html
+++ b/Azure/app/layout/blade/blade-container.html
@@ -1,8 +1,8 @@
 <div class="blade-overflow-wrapper">
     <div class="blades-container" data-ng-controller="bladeContainer as vm">
         <div style="width: 85px;"></div>
-        <div data-ng-repeat="blade in vm.blades" data-ng-class="vm.isMinimized(blade);">
-            <div class="blade-wrapper" style="width: {{blade.width}}px">
+        <div data-ng-repeat="blade in vm.blades" data-ng-class="vm.isMinimized(blade);" >
+            <div class="blade-wrapper" style="width: {{vm.getWidth(blade)}}px">
                 <div>
                     <div class="blade-toolbar fill-primary">
                         <div>
