Fixes and Enhancements

--- a/Azure/app/layout/blade/blade.html
+++ b/Azure/app/layout/blade/blade.html
@@ -26,5 +26,7 @@
                 <button class="button" data-ng-click="vm.sub()">Add Blade</button>
             </fieldset>
         </form>
+        <a href="#/">Back home</a>
+        <a href="#/bladePage/blade">Settings</a>
     </div>
 </div>
