--- a/Azure/app/layout/blade/blade-container.html
+++ b/Azure/app/layout/blade/blade-container.html
@@ -1,52 +1,57 @@
 <div class="blade-overflow-wrapper">
-    <div class="blades-container" data-ng-controller="bladeContainer as vm">
-        <div data-ng-repeat="blade in vm.blades" data-ng-class="vm.isMinimized(blade);" >
-            <div class="blade-wrapper" style="width: {{vm.getWidth(blade)}}px">
-                <div>
-                    <div class="blade-toolbar fill-primary">
-                        <div>
-                            <button class="blade-action-button default-fill">
-                                <svg viewBox="0 0 12 12" role="img" focusable="false">
-                                    <g>
-                                        <circle cx="6" cy="6" r="1.5" class="msportalfx-svg-c01"></circle>
-                                        <circle cx="1.5" cy="6" r="1.5" class="msportalfx-svg-c01"></circle>
-                                        <circle cx="10.5" cy="6" r="1.5" class="msportalfx-svg-c01"></circle>
-                                    </g>
-                                </svg>
-                            </button>
-                            <button class="blade-action-button default-fill">
-                                <svg viewBox="0 0 50 50" role="img" focusable="false">
-                                    <path d="M50,17.8L32.2,0c-0.8,2.6-0.9,5.2-0.5,7.7L18.6,20.7c-4-1.6-8.8-2.1-13-0.7l9.4,9.1L0,50l21-15l9,8.8 c1.3-4.2,0.9-8.6-0.7-12.4l13-13C44.8,18.7,47.4,18.6,50,17.8z" class="msportalfx-svg-c01"></path>
-                                </svg>
-                            </button>
-                            <button class="blade-action-button default-fill" data-ng-click="vm.minimizeBlade(blade);">
-                                <svg viewBox="0 0 16 16" role="img" focusable="false">
-                                    <rect x="2" y="12" width="12" height="2" class="msportalfx-svg-c01"></rect>
-                                </svg>
-                            </button>
-                            <button class="blade-action-button default-fill" data-ng-click="vm.closeBlade(blade)">
-                                <svg viewBox="0 0 16 16" role="img" focusable="false">
-                                    <polygon points="14,3.3 12.7,2 8,6.7 3.3,2 2,3.3 6.7,8 2,12.7 3.3,14 8,9.3 12.7,14 14,12.7 9.3,8 " class="msportalfx-svg-c01"></polygon>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="blade-header fill-secondary" data-ng-click="vm.restoreBlade(blade);">
-                        <div style="color:#fff;">
-                            <div class="blade-title-wrapper">
-                                <label class="blade-title">{{blade.title}}
-                                </label>
-                                <label class="blade-description">{{blade.subtitle}}</label>
+    <div>
+        <div></div>
+    </div>
+    <div>
+        <div class="light-scroll">
+            <div class="blades-container" data-ng-controller="bladeContainer as vm">
+                <div data-ng-repeat="blade in vm.blades" data-ng-class="vm.isMinimized(blade);">
+                    <div class="blade-wrapper" style="width: {{vm.getWidth(blade)}}px">
+                        <div class="fill-primary">
+                            <div class="blade-toolbar dark-border">
+                                <div>
+                                    <button class="blade-action-button default-fill">
+                                        <svg viewBox="0 0 12 12" role="img" focusable="false">
+                                            <g>
+                                                <circle cx="6" cy="6" r="1.5" class="msportalfx-svg-c01"></circle>
+                                                <circle cx="1.5" cy="6" r="1.5" class="msportalfx-svg-c01"></circle>
+                                                <circle cx="10.5" cy="6" r="1.5" class="msportalfx-svg-c01"></circle>
+                                            </g>
+                                        </svg>
+                                    </button>
+                                    <button class="blade-action-button default-fill">
+                                        <svg viewBox="0 0 50 50" role="img" focusable="false">
+                                            <path d="M50,17.8L32.2,0c-0.8,2.6-0.9,5.2-0.5,7.7L18.6,20.7c-4-1.6-8.8-2.1-13-0.7l9.4,9.1L0,50l21-15l9,8.8 c1.3-4.2,0.9-8.6-0.7-12.4l13-13C44.8,18.7,47.4,18.6,50,17.8z" class="msportalfx-svg-c01"></path>
+                                        </svg>
+                                    </button>
+                                    <button class="blade-action-button default-fill" data-ng-click="vm.minimizeBlade(blade);">
+                                        <svg viewBox="0 0 16 16" role="img" focusable="false">
+                                            <rect x="2" y="12" width="12" height="2" class="msportalfx-svg-c01"></rect>
+                                        </svg>
+                                    </button>
+                                    <button class="blade-action-button default-fill" data-ng-click="vm.closeBlade(blade)">
+                                        <svg viewBox="0 0 16 16" role="img" focusable="false">
+                                            <polygon points="14,3.3 12.7,2 8,6.7 3.3,2 2,3.3 6.7,8 2,12.7 3.3,14 8,9.3 12.7,14 14,12.7 9.3,8 " class="msportalfx-svg-c01"></polygon>
+                                        </svg>
+                                    </button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="blade-content">
-                        <div class="light-scroll">
-                            <div data-ng-include=blade.contentUrl>
+                        <div class="fill-secondary">
+                            <div class="blade-header medium-border" data-ng-click="vm.restoreBlade(blade);">
+                                <div class="blade-title-wrapper">
+                                    <label class="blade-title">{{blade.title}}
+                                    </label>
+                                    <label class="blade-description">{{blade.subtitle}}</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="blade-content light-border">
+                                <div class="light-scroll">
+                                    <div data-ng-include=blade.contentUrl>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -54,4 +59,4 @@
             </div>
         </div>
     </div>
-    <>
+</div>
