--- a/Azure/app/layout/blade/blade-container.html
+++ b/Azure/app/layout/blade/blade-container.html
@@ -40,14 +40,14 @@
                         <div class="fill-secondary">
                             <div class="blade-header medium-border" data-ng-click="vm.restoreBlade(blade);">
                                 <div class="blade-title-wrapper">
-                                    <label class="blade-title">{{blade.title}}
+                                    <label class="blade-title main-text">{{blade.title}}
                                     </label>
-                                    <label class="blade-description">{{blade.subtitle}}</label>
+                                    <label class="blade-description subtext">{{blade.subtitle}}</label>
                                 </div>
                             </div>
                         </div>
-                        <div class="">
-                            <div class="blade-content light-border">
+                        <div class="fill-light">
+                            <div class="blade-content light-border content-text">
                                 <div class="light-scroll">
                                     <div data-ng-include=blade.contentUrl>
                                     </div>
